[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemies/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="HighGroup" type="Node2D" parent="."]

[node name="High" type="Position2D" parent="HighGroup"]
position = Vector2( 0, 145 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="MidGroup" type="Node2D" parent="."]

[node name="Mid" type="Position2D" parent="MidGroup"]
position = Vector2( 0, 280 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="Mid2" type="Position2D" parent="MidGroup"]
position = Vector2( 0, 613.543 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="LowGroup" type="Node2D" parent="."]

[node name="Low" type="Position2D" parent="LowGroup"]
position = Vector2( 0, 97.4433 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="Low2" type="Position2D" parent="LowGroup"]
position = Vector2( 0, 208.235 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="Low3" type="Position2D" parent="LowGroup"]
position = Vector2( 0, 355 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="Low4" type="Position2D" parent="LowGroup"]
position = Vector2( 0, 500 )
__meta__ = {
"_gizmo_extents_": 50.0
}

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="StartupTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="StartupTimer" to="." method="_on_StartupTimer_timeout"]
